# filterpy

./: .gitignore  MANIFEST.in  filterpy-1.4.5-py3-none-any.whl  pyproject.toml  pytest.ini  setup.py
filterpy/discrete_bayes/: discrete_bayes.py
filterpy/stats/: stats.py
filterpy/tests/: __init__.py
filterpy/tests/common/: __init__.py
filterpy/tests/discrete_bayes/: __init__.py
filterpy/tests/gh/: __init__.py
filterpy/tests/hinfinity/: __init__.py
filterpy/tests/kalman/: __init__.py  test_ekf.py  test_enkf.py  test_mmae.py  test_ukf.py
filterpy/tests/leastsq/: __init__.py
filterpy/tests/memory/: __init__.py
filterpy/tests/stats/: __init__.py  stats_plotting.py
