[project]
name = "filterpy"
version = "1.4.5"
description = "Python Kalman filtering and optimal estimation library. Implements Kalman filter, particle filter, Extended Kalman filter, Unscented Kalman filter, g-h (alpha-beta), least squares, H Infinity, smoothers, and more. Has companion book Kalman and Bayesian Filters in Python=."
repository = "https://github.com/rlabbe/filterpy"
authors = [
    {name = "Roger Labbe", email = "rlabbejr@gmail.com"}
]
license = {text = "MIT"}
readme = "README.rst"
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 5 - Production/Stable",

    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Utilities",

    # Pick your license as you wish (should match "license" above)
    "License :: OSI Approved :: MIT License",

    # Specify the Python versions you support here. In particular, ensure
    # that you indicate whether you support Python 2, Python 3 or both.
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS"
]
keywords = [
    "Kalman filters filtering optimal estimation tracking"
]
requires-python = ">=3.11"
dependencies = [
    "numpy (==2.1.3)",
    "scipy (>=1.16.2,<2.0.0)"
]

[tool.poetry]
exclude= [
    "filterpy/examples",
    "**/tests",
]

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.10.6"
pytest = "^7.2.0"

[tool.black]
line-length = 120

[tool.isort]
combine_as_imports = true
line_length = 120
profile = "black"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
